Actions
Bug #3557
closeddumpvp_size is not updated correctly when a dump zvol's size is changed
Start date:
2013-02-13
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
From George Wilson's bug report at Delphix:
Dump zvols are supposed to have the capability to dynamically grow and shrink whenever an administrator changes the zvolsize property. The problem is that the dumpvp_size value is not being modified correctly when this action is performed.
Related issues
Updated by Christopher Siden over 9 years ago
- Status changed from In Progress to Closed
commit c61ea56 Author: George Wilson <george.wilson@delphix.com> Date: Wed Feb 20 22:50:16 2013 3557 dumpvp_size is not updated correctly when a dump zvol's size is changed 3558 setting the volsize on a dump device does not return back ENOSPC 3559 setting a volsize larger than the space available sometimes succeeds 3560 dumpadm should be able to remove a dump device Reviewed by: Adam Leventhal <ahl@delphix.com> Reviewed by: Matthew Ahrens <mahrens@delphix.com> Reviewed by: Christopher Siden <christopher.siden@delphix.com> Approved by: Albert Lee <trisk@nexenta.com>
Actions